--- a/ProgettoSIW2019/src/main/resources/messages/validation.properties
+++ b/ProgettoSIW2019/src/main/resources/messages/validation.properties
@@ -5,5 +5,6 @@ required.fotografo.nome = Mandatory field
 required.fotografo.cognome = Mandatory field
 
 required.fotografia.titolo = Mandatory field
+required.fotografia.immagine = Mandatory field
 
 required.album.nome = Mandatory field
