--- a/ProgettoSIW2019/src/main/resources/application.properties
+++ b/ProgettoSIW2019/src/main/resources/application.properties
@@ -12,16 +12,25 @@ server.servlet.context-path=/
 #=Datasource configuration
 #==================================
 spring.jpa.database=POSTGRESQL
+# SQL dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.platform=postgres
+# Do not log or not log for each sql query
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+# Hibernate ddl auto (none, validate, create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in the project
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/progettoSiw2019
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+# IMPORTANT: this allows to load lazily handled contents from the DB from any point of code
+# (so not only in transactions, and not only in the persistence layer).
+# It is a controversial choice (many people say it is an anti-pattern).
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 #=Webserver configuration
 #==================================
